This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
4/17/17: Added script command to skip points in the current group.

4/15/17: Added script command for writing a single-image file of specified
type and compression.

4/15/17: Added option for saving TIFF files with JPEG compression.

4/13/17: SEM-3-6-6
4/13/17: Fix TIFF writing, broken 4/5/17 (In 3.6).

4/13/17: Fixed writing of long summed frame lists (In 3.6).

4/13/17: Added automatic indentation of scripts with Tab/` and stabilized line
in editor window when Tab is used.

4/13/17: Changed dose rate output in microscope status panel to be per sqaure
Angstrom and appear unconditionally, and changed dose rate output in camera
setup dialog to be rate at camera, estimated from prior images.

4/11/17: SEM_3-6-5
4/10/17: Made cartridge loading and unloading be long operations; unload can
be run as one of the LongOperation entries.

4/10/17: Added test code for controlling JEOL free lens control (undocumented).

4/10/17: Fixed UpdateHardwareDarkRef command to treat its hours value properly
and to keep script from plowing ahead after starting it (In 3.6).

4/9/17: Added ability to import navigator items with positions defined by
image coordinates on maps.

4/8/17: Updated MiniXML library to eliminate bad memory leaks when reading or
writing an XML file (In 3.6).

4/6/17: Fixed double-clicking to remove Navigator point with collapse groups
on (In 3.6).

4/6/17: Added a camera property to enable or disable post-exposure actions for
one camera; for OneView, post-actions are disabled by default (In 3.6).

4/5/17: Fixed Realign to Item going out of Low Dose when realigning to a
polygon map where frame sizes are not the same as the current image sizes;
also enabled staying in Low Dose with change in intensity, exposure, or binning